--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "p5": "^1.4.2"
   }
 }
